Import of KOTEROV/Apache-Scriptor-Simple-1.20 from CPAN.
gitpan-cpan-distribution: Apache-Scriptor-Simple
gitpan-cpan-version:      1.20
gitpan-cpan-path:         KOTEROV/Apache-Scriptor-Simple-1.20.tar.gz
gitpan-cpan-author:       KOTEROV
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -29,7 +29,7 @@ This module requires these other modules and libraries:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2001 Dmitry Koteroff (koteroff@cpan.org), http://www.dklab.ru.
+Copyright (C) Dmitry Koterov <koterov at cpan dot org>, http://www.dklab.ru.
 Please email me if you want to use this module.
 
 
